<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvBetaMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_beta_message"
            android:textColor="@color/rj_gray"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btnShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_share_app"
            app:icon="@drawable/ic_share" app:iconGravity="textStart"
            android:backgroundTint="@color/rj_purple"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnOtherApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_other_apps"
            app:icon="@drawable/ic_apps" app:iconGravity="textStart"
            android:backgroundTint="@color/rj_purple"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        tools:text="Versiya: 1.0 Beta"
        android:textColor="@color/rj_gray"
        android:textSize="14sp"/>

</RelativeLayout>