<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".BodyFragment">

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/body_main_title"
        android:textColor="@color/rj_purple"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvMainTitle"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_edittext_left_rounded"
            android:hint="@string/body_hint_paste_link"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:padding="14dp" android:textColor="@color/black"
            android:textColorHint="@color/rj_gray"
            android:textSize="16sp"
            android:focusable="false" android:clickable="true"  />

        <ImageButton
            android:id="@+id/btnFetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_right_rounded"
            android:contentDescription="@string/body_action_find_video"
            android:padding="14dp"
            android:src="@drawable/ic_download"
            android:tint="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/resultsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchContainer"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/downloadOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical" />
    </LinearLayout>

</RelativeLayout>